--- a/requirements.txt
+++ b/requirements.txt
@@ -2,19 +2,23 @@ attrs==19.3.0
 backcall==0.2.0
 bleach==3.1.5
 certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
 colorama==0.4.3
 cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
+Flask==1.1.2
+idna==2.10
 importlib-metadata==1.7.0
 ipykernel==5.3.0
-ipython @ file:///C:/ci/ipython_1593433781269/work
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
-jedi @ file:///C:/ci/jedi_1592833832328/work
+itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==0.16.0
+jsonify==0.5
 jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==6.1.3
@@ -45,6 +49,7 @@ pywinpty==0.5.7
 pyzmq==19.0.1
 qtconsole==4.7.5
 QtPy==1.9.0
+requests==2.24.0
 scikit-learn==0.23.1
 scipy==1.5.1
 seaborn==0.10.1
@@ -56,8 +61,10 @@ testpath==0.4.4
 threadpoolctl==2.1.0
 tornado==6.0.4
 traitlets==4.3.3
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
+urllib3==1.25.9
 webencodings==0.5.1
+Werkzeug==1.0.1
 widgetsnbextension==3.5.1
 wincertstore==0.2
 zipp==3.1.0
+gunicorn
